--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,8 +20,8 @@ jobs: # a collection of steps
       # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
       - restore_cache:
           keys:
-            - rails-demo-bundle-v2-{{ checksum "Gemfile.lock" }}
-            - rails-demo-bundle-v2-
+            - kinki-train-info-{{ checksum "Gemfile.lock" }}
+            - kinki-train-info-bundle-v2-
 
       - run: # Install Ruby dependencies
           name: Bundle Install
@@ -29,7 +29,7 @@ jobs: # a collection of steps
 
       # Store bundle cache for Ruby dependencies
       - save_cache:
-          key: rails-demo-bundle-v2-{{ checksum "Gemfile.lock" }}
+          key: kinki-train-info-bundle-v2-{{ checksum "Gemfile.lock" }}
           paths:
             - vendor/bundle
 
