--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@ jobs: # a collection of steps
 
       - run: # Install Ruby dependencies
           name: Bundle Install
-          command: bundle check --path vendor/bundle || bundle install --deployment
+          command: bundle config set path 'vendor/bundle' || bundle config set deployment 'true'
 
       # Store bundle cache for Ruby dependencies
       - save_cache:
@@ -41,11 +41,11 @@ jobs: # a collection of steps
           paths:
             - vendor/bundle
 
-      # run rubocop!
-      - run:
-          name: run rubocop
-          command: |
-            bundle exec rubocop
+      # # run rubocop!
+      # - run:
+      #     name: run rubocop
+      #     command: |
+      #       bundle exec rubocop
 
       - run:
           name: Run rspec in parallel
